--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-readline": "*",
         "ext-redis": "*",
         "league/flysystem": "^2.5.0",
+        "open-telemetry/opentelemetry-logger-monolog": "^0.0.1",
         "spryker-eco/loggly": "^0.1.1",
         "spryker-eco/new-relic": "^2.0.1",
         "spryker-feature/agent-assist": "^202212.0",
