Install opentelemetry SDK

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-redis": "*",
         "league/flysystem": "^2.5.0",
         "open-telemetry/opentelemetry-logger-monolog": "^0.0.1",
+        "open-telemetry/sdk": "~1.0.0beta1@beta",
         "spryker-eco/loggly": "^0.1.1",
         "spryker-eco/new-relic": "^2.0.1",
         "spryker-feature/agent-assist": "^202212.0",
@@ -289,7 +290,8 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "sllh/composer-versions-check": true,
-            "spryker-sdk/integrator": true
+            "spryker-sdk/integrator": true,
+            "php-http/discovery": false
         }
     },
     "scripts": {
