--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-pgsql": "*",
         "ext-readline": "*",
         "ext-redis": "*",
+        "google/protobuf": "^3.23",
         "league/flysystem": "^2.5.0",
         "open-telemetry/exporter-otlp": "~1.0.0beta1@beta",
         "open-telemetry/opentelemetry-logger-monolog": "^0.0.1",
