--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -30,6 +30,8 @@ image:
         OTEL_EXPORTER_OTLP_ENDPOINT: https://api.honeycomb.io
         OTEL_SERVICE_NAME: spryker-unknown
         OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=le1jtssvHOMexDB8rkQ1IB"
+        OTEL_BLRP_MAX_EXPORT_BATCH_SIZE: 1
+        OTEL_BLRP_MAX_EXPORT_BATCH_SIZE: 1
     node:
         version: 16
         npm: 8
