--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -27,6 +27,12 @@ image:
             "AUTH0_CLIENT_ID": "",
             "AUTH0_CLIENT_SECRET": ""
         }'
+#        OTEL_EXPORTER_OTLP_ENDPOINT: https://otlp.eu01.nr-data.net
+#        OTEL_SERVICE_NAME: spryker-unknown
+#        OTEL_EXPORTER_OTLP_HEADERS: "api-key=<NewRelicApiKey>"
+#        OTEL_BLRP_MAX_EXPORT_BATCH_SIZE: 1
+#        OTEL_BLRP_SCHEDULE_DELAY: 1
+
         OTEL_EXPORTER_OTLP_ENDPOINT: https://api.honeycomb.io
         OTEL_SERVICE_NAME: spryker-unknown
         OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=le1jtssvHOMexDB8rkQ1IB"
