--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -5,7 +5,7 @@ tag: 'dev'
 
 environment: docker.dev
 image:
-    tag: lstrojny/spryker-php-otel
+    tag: bate/spryker-php-otel:8.1
     php:
         enabled-extensions:
             - blackfire
