--- a/config/install/development.yml
+++ b/config/install/development.yml
@@ -3,6 +3,8 @@ env:
 
 stores:
     - DE
+    - AT
+    - US
 
 command-timeout: 3600
 
@@ -139,6 +141,7 @@ sections:
             command: 'vendor/bin/console propel:database:drop'
             pre: 'hidden/maintenance-zed-on'
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -152,6 +155,7 @@ sections:
         propel-create:
             command: 'vendor/bin/console propel:database:create'
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -159,6 +163,7 @@ sections:
         propel-postgres-compatibility:
             command: 'vendor/bin/console propel:pg-sql-compat'
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -166,6 +171,7 @@ sections:
         propel-copy-schema:
             command: "vendor/bin/console propel:schema:copy"
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -184,6 +190,7 @@ sections:
             command: 'vendor/bin/console propel:migration:check'
             breakOnFailure: false
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -198,6 +205,7 @@ sections:
         propel-migrate:
             command: 'vendor/bin/console propel:migrate'
             stores:
+                - US
                 - DE
             groups:
                 - propel
@@ -217,6 +225,7 @@ sections:
             command: 'vendor/bin/console setup:init-db'
             timeout: 360000
             stores:
+                - US
                 - DE
 
         setup-search-create-sources:
@@ -244,9 +253,15 @@ sections:
             stores:
                 - DE
 
+        import-us-region-demodata:
+            command: 'vendor/bin/console data:import --config=data/import/local/full_US.yml'
+            stores:
+                - US
+
         update-product-labels:
             command: 'vendor/bin/console product-label:relations:update'
             stores:
+                - US
                 - DE
 
     jenkins-up:
