--- a/deploy.yml
+++ b/deploy.yml
@@ -13,10 +13,13 @@ image:
     environment:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
+        SPRYKER_YVES_HOST_DE: yves.de.spryker.local
+        SPRYKER_YVES_HOST_AT: yves.at.spryker.local
+        SPRYKER_YVES_HOST_US: yves.us.spryker.local
 
     node:
-        version: 16
-        npm: 8
+        version: 18
+        npm: 9
 
 composer:
     mode: --no-dev
@@ -96,6 +99,20 @@ groups:
                         store: DE
                     glue.at.spryker.local:
                         store: AT
+            glue_storefront_eu:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.de.spryker.local:
+                        store: DE
+                    glue-storefront.at.spryker.local:
+                        store: AT
+            glue_backend_eu:
+                application: glue-backend
+                endpoints:
+                    glue-backend.de.spryker.local:
+                        store: DE
+                    glue-backend.at.spryker.local:
+                        store: AT
             backoffice_eu:
                 application: backoffice
                 endpoints:
@@ -142,6 +159,16 @@ groups:
                 application: glue
                 endpoints:
                     glue.us.spryker.local:
+                        store: US
+            glue_storefront_us:
+                application: glue-storefront
+                endpoints:
+                    glue-storefront.us.spryker.local:
+                        store: US
+            glue_backend_us:
+                application: glue-backend
+                endpoints:
+                    glue-backend.us.spryker.local:
                         store: US
             backoffice_us:
                 application: backoffice
